...
                    }
                    .frame(width: 0)
                    .opacity(0)
                }
                
            }
            .accessibilityIdentifier("ReminderList")
            .navigationTitle("Lembretes")
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing) {
                    NavigationLink(destination: ReminderCreateView(viewModel: viewModel)) {
                        Image(systemName: "plus")
                    }
                    .accessibilityIdentifier("addReminderButton")
                }
            }
            
        }
    }
}
...
